--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             <div class="form-group">
               <input type="password" placeholder="Password" class="form-control">
             </div>
-            <a class="btn btn-default btn-sm">Login</a>
+			
+            <a class="btn btn-default btn-sm" id="hideLogin">Login</a>
+			 	
           </form>
         </div><!--/.navbar-collapse -->
       </div>
@@ -61,7 +63,7 @@
           She was one of the first programmers of the Harvard Mark I computer in 1944, and invented the first compiler for a computer programming language, and the one of those who popularized the idea of machine-independent programming languages, which led to the development of COBOL, one of the first high-level programming languages. She is credited with popularizing the term "debugging" for fixing computer glitches (inspired by an actual moth removed from the computer). Owing to the breadth of her accomplishments and her naval rank, she is sometimes referred to as "Amazing Grace". The U.S. Navy Arleigh Burke class guided-missile destroyer USS Hopper (DDG-70) is named for her, as was the Cray XE6 "Hopper" supercomputer at NERSC.
         </p>
         <p>
-          <a class="btn btn-primary btn-lg view-details" href="#" role="button">Learn more &raquo;</a>
+          <a class="btn btn-primary btn-lg view-details" id= "show"  href="#" role="button">Learn more &raquo;</a>
         </p>
       </div>
     </div>
@@ -72,7 +74,7 @@
         <h2>Debugging</h2>
         <p class="teaser">Hopper was known for popularizing the term "bug" in software development.</p>
         <p class="details"><img class="pull-right img-thumbnail" src="img/bug.jpg">While she was working on a Mark II Computer at a US Navy research lab in Dahlgren, Virginia in 1947, her associates discovered a moth stuck in a relay and thereby impeding operation, whereupon she remarked that they were "debugging" the system. Though the term bug had been in use for many years in engineering to refer to small glitches and inexplicable problems, Admiral Hopper did bring the term into popularity. The remains of the moth can be found in the group's log book at the Smithsonian Institution's National Museum of American History in Washington, D.C.</p>
-        <p><a class="btn btn-default view-details" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-default view-details" id= "show" role="button">View details &raquo;</a></p>
       </div>
       <hr>
       <div class="quotes">
@@ -85,7 +87,7 @@
           <blockquote>It's easier to ask forgiveness than it is to get permission.</blockquote>
           <blockquote>You manage things; you lead people.</blockquote>
         </div>
-        <p><a class="btn btn-default view-details" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-default view-details" id= "show"  role="button">View details &raquo;</a></p>
       </div>
       <hr>
       <div class="awards">
@@ -109,22 +111,22 @@
           <li>2009: The Department of Energy's National Energy Research Scientific Computing Center named its flagship system "Hopper".</li>
           <li>2009: Office of Naval Intelligence creates the Grace Hopper Information Services Center.</li>
         </ul>
-        <p><a class="btn btn-default view-details" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-default view-details" id= "show"  role="button">View details &raquo;</a></p>
       </div>
       <hr>
       <div class="voting">
         <h2>Vote for Grace Hopper</h2>
         <p class="lead">Was Grace Hopper a great software developer? Or the greatest software developer of all-time?</p>
         <div class="voting-buttons text-center">
-          <button class="btn btn-primary btn-lg vote" data-vote="great">Great!</button>
-          <button class="btn btn-primary btn-lg vote" data-vote="greatest">Greatest of All-Time!</button>
+          <button onclick="great()" class="btn btn-primary btn-lg vote" id="greatBtn" data-vote="great">Great!</button>
+          <button onclick="greatest()" class="btn btn-primary btn-lg vote" id="greatestBtn" data-vote="greatest">Greatest of All-Time!</button>
         </div>
         <h3 class="text-primary">Results</h3>
         <div class="progress">
-          <div class="progress-bar progress-bar-info great-progress" style="width: 10%">Great!</div>
+          <div class="progress-bar progress-bar-info great-progress" id ="greatBar" style="width: 10%">Great!</div>
         </div>
         <div class="progress">
-          <div class="progress-bar progress-bar-success greatest-progress" style="width: 30%">Greatest of All-Time!</div>
+          <div class="progress-bar progress-bar-success greatest-progress" id = "greatestBar" style="width: 30%">Greatest of All-Time!</div>
         </div>
       </div>
       <hr>
